improved the RotatingCube movement stuff